# intake_assistant

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.sdwc/: CLAUDE_BASE.md  generation_rules.md  intake_template.yaml  output_contract.md
intake-assistant-api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
intake-assistant-api/src/intake_assistant_api/: main.py
intake-assistant-api/src/intake_assistant_api/core/: config.py  exceptions.py  rate_limiter.py  sanitizer.py
intake-assistant-api/src/intake_assistant_api/routers/: analyze.py  finalize.py  generate.py  health.py  recommend.py  schema_meta.py  validate.py
intake-assistant-api/src/intake_assistant_api/schemas/: analyze.py  finalize.py  generate.py  health.py  recommend.py  schema_meta.py  validate.py
intake-assistant-api/src/intake_assistant_api/services/: analyze_service.py  generate_service.py  recommend_service.py  sdwc_client.py  template_cache.py  template_parser.py
intake-assistant-api/src/intake_assistant_api/services/prompts/: analyze.py  generate.py  prompt_builder.py  recommend.py
intake-assistant-api/tests/: conftest.py
intake-assistant-api/tests/unit/: test_analyze_api.py  test_analyze_service.py  test_finalize_api.py  test_generate_api.py  test_generate_service.py  test_health.py  test_prompt_builder.py  test_rate_limit_api.py  test_rate_limiter.py  test_recommend_api.py  test_recommend_service.py  test_sanitizer.py  test_schema_meta_api.py  test_sdwc_client.py  test_template_parser.py
intake-assistant-web/: .dockerignore  .env.example  Dockerfile  (+9 more)
(+227 files in other folders)
