[tool.poetry]
name = "intake-assistant-api"
version = "0.1.0"
description = "AI 대화를 통해 SDwC용 intake_data.yaml을 자동 생성하는 백엔드 API"
authors = []
packages = [{ include = "intake_assistant_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
anthropic = "^0.49"
httpx = "^0.28"
pyyaml = "^6.0"
pydantic = "^2.10"
pydantic-settings = "^2.7"
structlog = "^25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
pytest-cov = "^6.0"
ruff = "^0.9"
mypy = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
